# tfm_adrian

./: README.md
cam_scripts/: CMakeLists.txt  README.md  package.xml
cam_scripts/include/cam_scripts/: pc_trimmer.h  pcstructure.h
cam_scripts/launch/: hole_detector.launch
cam_scripts/src/: cloud_merge.cpp  hole_detector.cpp  pc_subscriber.sh  pc_trimmer.cpp  pc_trimmer_node.cpp  pcstructure.cpp  pointcloud_subscriber.py  range_publisher.py
camera_pose/camera_pose_calibration/: package.xml  setup.py
camera_pose/camera_pose_calibration/launch_extrinsics/: calibrate_2_camera.launch
camera_pose/camera_pose_calibration/scripts/: calibration_transform_publisher.py  capture_monitor.py  filter_intervals.py  multicam_capture_exec.py  run_optimization_online.py
camera_pose/kinect_depth_calibration/: package.xml  setup.py
contrast/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
contrast/src/: contrast_augmenter.cpp
goal_manager/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
goal_manager/action/: setGoal.action
goal_manager/launch/: get_pose_server.py  set_pose_client.py  set_pose_client.py~  waypoints.txt~
goal_manager/msg/: pose.msg
goal_manager/srv/: position.srv  position.srv~
rtabmap-launch-files/: rtabmap-cameraandlaser.launch
rtabmap-launch-files/indigo-devel-version/: rtabmapTwoCameras.launch
rtabmap-launch-files/master-version/: rtabmapTwoCameras.launch  rtabmapTwoCamerasAndLaser.launch  rtabmapTwoCamerasVoxel.launch
